# packaging_tutorial

./: README.md  pyproject.toml
src/example_package_trishie.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
